<resources>
    <string name="weimar_app_name">AU Weimar</string>
    <string name="lmu_app_name">AU LMU</string>
    <string name="MAIN_MENU">http://ec2-35-157-27-16.eu-central-1.compute.amazonaws.com/menu.xml</string>
    <string name="ALL_NEWS">https://www.uni-weimar.de/de/universitaet/aktuell/pinnwaende/rss/</string>
    <string name="WEIMAR_COURSES_URL">https://www.uni-weimar.de/qisserver/rds?state=wtree&amp;search=1&amp;category=veranstaltung.browse&amp;navigationPosition=lectures%2Clectureindex&amp;breadcrumb=lectureindex&amp;topitem=lectures&amp;subitem=lectureindex</string>
    <string name="LMU_COURSES_URL">https://lsf.verwaltung.uni-muenchen.de/qisserver/rds?state=wtree&amp;search=1&amp;category=veranstaltung.browse&amp;navigationPosition=functions%2Clectureindex&amp;breadcrumb=lectureindex&amp;topitem=locallinks&amp;subitem=lectureindex</string>
    <string name="DEFAULT_COURSES_URL">https://www.uni-weimar.de/qisserver/rds?state=wtree&amp;search=1&amp;category=veranstaltung.browse&amp;navigationPosition=lectures%2Clectureindex&amp;breadcrumb=lectureindex&amp;topitem=lectures&amp;subitem=lectureindex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="au_menu_news_item">News</string>
    <string name="au_menu_schedule_item">Schedule</string>
    <string name="au_menu_cafeteria_item">Cafeteria</string>
    <string name="au_menu_library_item">Library</string>
    <string name="au_menu_profile_item">Profile</string>
    <string name="au_menu_settings_item">Settings</string>


    <string-array name="news_feed_categories">
        <item>All</item>
        <item>Favourite</item>
        <item>Pinnwand: Universität</item>
        <item>Pinnwand: Architektur und Urbanistik</item>
        <item>Pinnwand: Bauingenieurwesen</item>
        <item>Pinnwand: Kunst und Gestaltung</item>
        <item>Pinnwand: Medien</item>
        <item>Pinnwand: SCC</item>
        <item>Pinnwand: Sprachen</item>
        <item>Pinnwand: Universitätssport </item>
        <item>Pinnwand: Bibliothek</item>
        <item>Pinnwand: Piazza</item>
        <item>Pinnwand: Wohnen</item>
        <item>Pinnwand: International</item>
    </string-array>
    <string name="title_activity_aunews_feed_item_detailed">AUNewsFeedItemDetailedActivity</string>
    <string name="au_news_feed_item_category_tag">Category:</string>
    <string name="au_event_type">Veranstaltungsart</string>
    <string name="au_event_number">Veranstaltungsnummer</string>
    <string name="au_event_semester">Semester</string>
    <string name="au_sws">SWS</string>
    <string name="au_event_lecturers">Zugeordnete Personen</string>
    <string name="au_event_schedule">Schedule</string>
    <string name="au_event_description">Beschreibung</string>
    <string name="title_activity_auevent_schedule">AUEventScheduleActivity</string>
    <string name="TAG">Tag</string>
    <string name="ZEIT">Zeit</string>
    <string name="RHYTMUS">Rhytmus</string>
    <string name="DAUER">Dauer</string>
    <string name="RAUM">Raum</string>
    <string name="max_teilnehmer_innen">Max. Teilnehmer/-innen</string>
    <string name="MONDAY_TAG">Mo</string>
    <string name="TUESDAY_TAG">Tue</string>
    <string name="WEDNESDAY_TAG">We</string>
    <string name="THURSDAY_TAG">Thu</string>
    <string name="FRIDAY_TAG">Fri</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="SCHEDULE_NAME_TAG">" Schedule"</string>
    <string name="AU_FACULTY_TOP_HEADER">Veranstaltungsverzeichnis der Bauhaus-Universität Weimar</string>
    <string name="WEIMAR_FACULTY_TOP_HEADER">Veranstaltungsverzeichnis der Bauhaus-Universität Weimar</string>
    <string name="LMU_FACULTY_TOP_HEADER">Vorlesungsverzeichnis (WiSe 2017/18)</string>
    <string name="lorem_ipsum_dolor_sit_amen">lorem ipsum dolor sit amen</string>
    <string name="DEFAULT_WEIMAR_CAFETERIA_URL">http://www.stw-thueringen.de/deutsch/mensen/einrichtungen/weimar/mensa-am-park.html</string>
    <string name="DEFAULT_CAFETERIA_URL">http://www.studentenwerk-muenchen.de/mensa/speiseplan/speiseplan_421_-de.html</string>
    <string name="DEFAULT_CAFETERIA_LINK_MASK">http://www.studentenwerk-muenchen.de</string>
    <string name="event_name">Event name</string>
    <string name="event_time">Event time</string>
    <string name="event_place">Event place</string>
    <string name="DAYS_AGO_TAG">days ago</string>
    <string name="MINS_AGO_TAG">min ago</string>
</resources>
