<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_auevent_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="www.uni_weimar.de.au.view.activity.AUEventScheduleActivity"
    tools:showIn="@layout/activity_auevent_schedule">

    <android.support.v7.widget.CardView
        android:id="@+id/auEventScheduleTableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="11"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TAG"
                    android:textSize="@dimen/text16" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="#838181" />

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ZEIT"
                    android:textSize="@dimen/text16" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="#838181" />

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RHYTMUS"
                    android:textSize="@dimen/text16" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="#838181" />

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DAUER"
                    android:textSize="@dimen/text16" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="#838181" />

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RAUM"
                    android:textSize="@dimen/text16" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="#838181" />

            <LinearLayout
                android:layout_width="@dimen/au_event_schedule_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_teilnehmer_innen"
                    android:textSize="@dimen/text16" />
            </LinearLayout>
        </GridLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/auEventScheduleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auEventScheduleTableHeader" />

</RelativeLayout>
