<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/au_fav_event_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="20dp"
                android:rowCount="3">
                <TextView
                    android:id="@+id/au_my_schedule_event_name_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/event_name"
                    android:textSize="@dimen/text14" />
                <TextView
                    android:id="@+id/au_my_schedule_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text14" />
                <TextView
                    android:id="@+id/au_my_schedule_event_time_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:text="@string/event_time"
                    android:textSize="@dimen/text14" />
                <TextView
                    android:id="@+id/au_my_schedule_event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text14" />
                <TextView
                    android:id="@+id/au_my_schedule_event_place_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/event_place"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/text14" />
                <TextView
                    android:id="@+id/au_my_schedule_event_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text14" />
            </GridLayout>


            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="2dp"
                android:background="#96a48e8e" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>